# dia2stream

./: README.md  expand_generate.py  pyproject.toml  requirements.txt  server.py  streaming_outline.py  test_client.py
dia2/audio/: codec.py
dia2/runtime/: audio_io.py  context.py
