[project]
name = "dia2stream"
version = "0.1.0"
description = "Low-latency streaming TTS server using Dia2, optimized for voice call applications"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "transformers>=4.40.0",
    "huggingface_hub",
    "websockets",
    "numpy",
    "soundfile",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
